--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,7 @@
 .futura-font {
   font-family: 'Futura Std', sans-serif;                                      
 }
+
+body, * {
+  font-family: 'PT Sans', sans-serif !important;
+}
